[metadata]
name = safepicking
version = 0.1.0
author = Kentaro Wada
author_email = www.kentaro.wada@gmail.com
url = https://github.com/wkentaro/safepicking
description = SafePicking: Learning Safe Object Extraction via Object-Level Mapping
long_description = file: README.md
long_description_content_type = text/markdown
license_file = LICENSE

[options.entry_points]
console_scripts =
    urdf_view = safepicking.cli.urdf_view:main

[flake8]
exclude = .?*, src/, examples/picking/_rollout_generator.py
ignore = E741, H238, W503, W504, E203
